Fix bridge reconcilliation list configuration
We are using a list of properties, make sure the configuration format is
updated. This also changes the property so the problem can be discovered
sooner during upgrades.

JIRA: OVSDB-468
Change-Id: Ibfdb5c39e9357c285319e8cbd77680cfe36bece7
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>